--- a/bicep/parameters/appInsight.json
+++ b/bicep/parameters/appInsight.json
@@ -9,28 +9,9 @@
         "kind": "web",
         "environment": "dev",
         "region": "eastus",
-        "applicationInsightsName": "app-insights-dev",
-        "workspaceResourceId": "/subscriptions/<subscription-id>/resourceGroups/<resource-group>/providers/Microsoft.OperationalInsights/workspaces/<workspace-name>",
+        "applicationInsightsName": "souvik-appinsight-poc",
+        "workspaceResourceId": "/subscriptions/54046951-33c9-43a8-b297-54bbd93112ab/resourceGroups/komatsupoc/providers/Microsoft.OperationalInsights/workspaces/MyLogpoc",
         "retentionInDays": 90,
-        "Application_Type": "web",
-        "Flow_Type": "Redfield",
-        "Request_Source": "IbizaAIExtension",
-        "IngestionMode": "LogAnalytics",
-        "publicNetworkAccessForIngestion": "Enabled",
-        "publicNetworkAccessForQuery": "Enabled"
-      },
-      {
-        "tags":{
-            "Company": "KAC",
-            "Environment": "Dev",
-            "Project": "poc"
-          },
-        "kind": "web",
-        "environment": "prod",
-        "region": "westus",
-        "applicationInsightsName": "app-insights-prod",
-        "workspaceResourceId": "/subscriptions/<subscription-id>/resourceGroups/<resource-group>/providers/Microsoft.OperationalInsights/workspaces/<workspace-name>",
-        "retentionInDays": 120,
         "Application_Type": "web",
         "Flow_Type": "Redfield",
         "Request_Source": "IbizaAIExtension",
