--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,15 +93,15 @@ jobs:
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
 
-  test6:
-    uses: ./.github/workflows/appserviceplan.yaml
-    with: 
-      environment: ${{ github.event.inputs.environment }}
-    secrets:
-      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-      AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+  # test6:
+  #   uses: ./.github/workflows/appserviceplan.yaml
+  #   with: 
+  #     environment: ${{ github.event.inputs.environment }}
+  #   secrets:
+  #     AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+  #     AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+  #     AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  #     AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
   # deploy: 
   #   runs-on: ubuntu-latest
   #   environment: ${{ inputs.environment }}
