--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,6 +83,8 @@ jobs:
   #     AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
   test5:
+    permissions:
+      contents: write
     uses: ./.github/workflows/versioning.yml
     with: 
       environment: ${{ github.event.inputs.environment }}
