--- a/.github/workflows/pr-versioning.yaml
+++ b/.github/workflows/pr-versioning.yaml
@@ -6,15 +6,28 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
-  parse-pr-and-run-versioning:
+  versioning:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Check if PR was merged
+        run: |
+          if [[ "${{ github.event.pull_request.merged }}" != "true" ]]; then
+            echo "PR was closed but not merged. Skipping."
+            exit 0
+          fi
 
       - name: Parse PR checkboxes for inputs
-        id: pr-body
+        id: parse
         uses: actions/github-script@v7
         with:
           script: |
@@ -39,11 +52,36 @@ jobs:
             core.setOutput('change_type', changeType);
             core.setOutput('environment', environment);
 
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Get latest tag and determine version change type
+        if: ${{ steps.parse.outputs.environment == 'prod' }}
+        id: versioning
+        run: |
+          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
+          VERSION=${LAST_TAG#v}
+          MAJOR=$(echo $VERSION | cut -d '.' -f 1)
+          MINOR=$(echo $VERSION | cut -d '.' -f 2)
+          PATCH=$(echo $VERSION | cut -d '.' -f 3)
 
-      - name: Call versioning workflow
-        uses: ./.github/workflows/versioning.yml
-        with:
-          change-type: ${{ steps.pr-body.outputs.change_type }}
-          environment: ${{ steps.pr-body.outputs.environment }}
+          changetype="${{ steps.parse.outputs.change_type }}"
+          if echo "$changetype" | grep -i "Major"; then
+            MAJOR=$((MAJOR + 1))
+            MINOR=0
+            PATCH=0
+          elif echo "$changetype" | grep -i "Minor"; then
+            MINOR=$((MINOR + 1))
+            PATCH=0
+          elif echo "$changetype" | grep -i "Patch"; then
+            PATCH=$((PATCH + 1))
+          fi
+
+          NEW_VERSION="v$MAJOR.$MINOR.$PATCH"
+          echo "New version: $NEW_VERSION"
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+
+      - name: Create and push new version tag
+        if: ${{ steps.parse.outputs.environment == 'prod' && github.ref_name == 'main' }}
+        run: |
+          git config --global user.email "souvikg90@gmail.com"
+          git config --global user.name "sghosh"
+          git tag -a $NEW_VERSION -m "Release version $NEW_VERSION"
+          git push origin $NEW_VERSION
